TSK-8179 -- раздел с PowerOfAttorneyFNSDOVELData пришлось переделывать

--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc
@@ -19,6 +19,10 @@ public class SeparateSubdivisionManagerInfo
 |Имя |Описание
 
 |`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]` |ИНН физического лица - руководителя обособленного подразделения.
+|`Gender` |Пол физического лица (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]` |Дата рождения (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[BirthPlace]` |Место рождения.
 |`CitizenshipType` |Признак наличия гражданства (Обязательный).
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]` |Гражданство  (Обязательный с условием). Обязательный для иностранного гражданина. Принимает значение в соответствии с Общероссийским классификатором стран мира.
 
 |===
