--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc
@@ -18,8 +18,8 @@ public sealed class PrincipalInfo
 |===
 |Имя |Описание
 
-|`RussianEntity` |Сведения о юридическом лице
-|`ForeignLegalEntityPrincipal` |Сведения об иностранном юридическом лице
-|`SoleProprietorPrincipal` |Сведения об индивидуальном предпринимателе
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RussianLegalEntityPrincipalInfo_CL.adoc[RussianEntity]` |Сведения о юридическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ForeignLegalEntityPrincipalInfo_CL.adoc[ForeignLegalEntityPrincipal]` |Сведения об иностранном юридическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleProprietorInfo0_CL.adoc[SoleProprietorPrincipal]` |Сведения об индивидуальном предпринимателе
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IndividualInfo_CL.adoc[Individual]` |Сведения о физическом лице
 |===
