--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalsInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.PrincipalsInfo_CL.adoc
@@ -18,7 +18,7 @@ public sealed class PrincipalsInfo
 |===
 |Имя |Описание
 
-|`PrincipalType` |Тип доверителя
-|`PrincipalInfo` |Сведения о доверителе
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrincipalType_EN.adoc[PrincipalType]` |Тип доверителя
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PrincipalInfo_CL.adoc[PrincipalInfo]` |Сведения о доверителе
 
 |===
