--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc
@@ -18,9 +18,9 @@ public sealed class RepresentativePowersInfo
 |===
 |Имя |Описание
 
-|`AuthorityType` |Тип полномочия
-|`JointRepresentationType` |Признак совместного осуществления полномочий
-|`LossOfAuthorityType` |Признак утраты полномочий при передоверии
-|`PowersTextContent` |Текстовое содержание полномочия
-|`MachineReadablePowersInfo` |Сведения о машиночитаемом полномочии (машиночитаемых полномочиях)
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.AuthorityType_EN.adoc[AuthorityType]` |Тип полномочия
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.JointRepresentationType_EN.adoc[JointRepresentationType]` |Признак совместного осуществления полномочий
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyLossOfAuthorityType_EN.adoc[LossOfAuthorityType]` |Признак утраты полномочий при передоверии
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[PowersTextContent]` |Текстовое содержание полномочия
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.MachineReadablePowersInfo_CL.adoc[MachineReadablePowersInfo]` |Сведения о машиночитаемом полномочии (машиночитаемых полномочиях)
 |===
