--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc
@@ -18,6 +18,6 @@ public sealed class RepresentativesInfo
 |===
 |Имя |Описание
 
-|`RepresentativeType` |Тип представителя
-|`Representative` |Сведения о представителе
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.EntityType_EN.adoc[RepresentativeType]` |Тип представителя
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativeInfo_CL.adoc[Representative]` |Сведения о представителе
 |===
