--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.AddressInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.AddressInfo_CL.adoc
@@ -1,4 +1,4 @@
-= AddressInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.AddressInfo -- класс
 
 Адрес доверителя в доверенности (АдрДовТип) -- 4.23
 
@@ -18,10 +18,10 @@ public class AddressInfo
 |===
 |Имя |Описание
 
-|`AddressKyr`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[AddressKyr]`
 |Адрес в русской транскрипции (Обязательный с условием). Обязательный, если указывается адрес российской организации.
 
-|`AddressLat`
-|Адрес в латинской транскрипции  (Обязательный с условием). Обязательный, если не указан Address.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[AddressLat]`
+|Адрес в латинской транскрипции  (Обязательный с условием). Обязательный, если не указан `Address`.
 
 |===
