--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.FIO_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.FIO_CL.adoc
@@ -1,4 +1,4 @@
-= FIO -- класс
+= PowerOfAttorneyFNSDOVEL502Data.FIO -- класс
 
 Фамилия, имя, отчество (ФИОТип) - 4.25
 
@@ -18,13 +18,13 @@ public sealed class FIO
 |===
 |Имя |Описание
 
-|`LastName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[LastName]`
 |Фамилия (Обязательный).
 
-|`FirstName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FirstName]`
 |Имя (Обязательный).
 
-|`MiddleName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[MiddleName]`
 |Отчество.
 
 |===
