--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo1_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo1_CL.adoc
@@ -1,4 +1,4 @@
-= ForeignCompanyInfo1 -- класс
+= PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo1 -- класс
 
 Сведения о доверителе – иностранном юридическом лице (ДоверитИО) -- 4.15.
 
@@ -18,13 +18,13 @@ public class ForeignCompanyInfo1
 |===
 |Имя |Описание
 
-|`Name`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
 |Наименование иностранной организации (Обязательный)
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН организации
 
-|`Kpp`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
 |КПП обособленного подразделения
 
 |===
