--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo_CL.adoc
@@ -1,4 +1,4 @@
-= ForeignCompanyInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo -- класс
 
 Сведения об иностранной организации (ИО) -- 4.9.
 
@@ -18,31 +18,31 @@ public class ForeignCompanyInfo
 |===
 |Имя |Описание
 
-|`Name`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
 |Наименование иностранной организации (Обязательный).
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН организации (Обязательный).
 
-|`Kpp`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
 |КПП обособленного подразделения (Обязательный).
 
-|`RegistrationCountry`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegistrationCountry]`
 |Страна регистрации (инкорпорации) (Обязательный). Принимает значение в соответствии с Общероссийским классификатором стран мира.
 
-|`RegisteringAuthorityName`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegisteringAuthorityName]`
 |Наименование регистрирующего органа.
 
-|`RegNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RegNumber]`
 |Регистрационный номер в стране регистрации (инкорпорации) (Обязательный).
 
-|`TaxpayerCode`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[TaxpayerCode]`
 |Код налогоплательщика в стране регистрации (инкорпорации) или аналог.
 
-|`LegalAddress`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.AddressInfo_CL.adoc[LegalAddress]`
 |Полный адрес иностранной организации в стране регистрации (инкорпорации) (Обязательный).
 
-|`Manager`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc[Manager]`
 |Сведения о руководителе обособленного подразделения (Обязательный).
 
 |===
