--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo_CL.adoc
@@ -1,4 +1,4 @@
-= IdentityCardInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo -- класс
 
 Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип) -- 4.24.
 
@@ -21,16 +21,16 @@ public class IdentityCardInfo
 |`DocumentKindCode`
 |Код вида документа (Обязательный).
 
-|`DocumentSerialNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[DocumentSerialNumber]`
 |Серия и номер документа (Обязательный).
 
-|`IssueDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[IssueDate]`
 |Дата выдачи документа (Обязательный).
 
-|`Issuer`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Issuer]`
 |Наименование органа, выдавшего документ (Обязательный с условием). Обязательный, если вид документа - Паспорт гражданина Российской Федерации.
 
-|`IssuerCode`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[IssuerCode]`
 |Код подразделения органа, выдавшего документ.
 
 |===
