--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2_CL.adoc
@@ -1,4 +1,4 @@
-= IndividualInfo2 -- класс
+= PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2 -- класс
 
 Сведения о физическом лице, в том числе индивидуальном предпринимателе (СвФизЛицТип) -- 4.21.
 
@@ -18,26 +18,25 @@ public class IndividualInfo2
 |===
 |Имя |Описание
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН физического лица.
 
-|`Ogrnip`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrnip]`
 |ОГРНИП (Обязательный с условием). Обязателен, если лицо является индивидуальным предпринимателем.
 
-|`Snils`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]`
 |СНИЛС (Обязательный).
 
-|`Citizenship`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]`
 |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
 
-|`BirthDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]`
 |Дата рождения.
 
-|`Fio`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.FIO_CL.adoc[Fio]`
 |Фамилия, имя, отчество физического лица (Обязательный).
 
-|`IdentityCard`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc[IdentityCard]`
 |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
-
 
 |===
