--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3_CL.adoc
@@ -1,4 +1,4 @@
-= IndividualInfo3 -- класс
+= PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3 -- класс
 
 Сведения по физическому лицу (СведФЛТип) -- 4.22.
 
@@ -18,22 +18,22 @@ public class IndividualInfo3
 |===
 |Имя |Описание
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН физического лица.
 
-|`Ogrnip`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrnip]`
 |ОГРНИП (Обязательный с условием). Обязателен, если лицо является индивидуальным предпринимателем.
 
-|`Snils`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]`
 |СНИЛС (Обязательный).
 
-|`Citizenship`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]`
 |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
 
-|`BirthDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]`
 |Дата рождения.
 
-|`IdentityCard`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc[IdentityCard]`
 |Сведения о документе, удостоверяющем личность физического лица (Обязательный).
 
 |===
