--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo_CL.adoc
@@ -1,4 +1,4 @@
-= IndividualInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.IndividualInfo -- класс
 
 Сведения по физическому лицу (СвФЛ) -- 4.8.
 
@@ -18,19 +18,19 @@ public class IndividualInfo
 |===
 |Имя |Описание
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН физического лица.
 
-|`Snils`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]`
 |СНИЛС (Обязательный).
 
-|`Citizenship`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]`
 |Гражданство. Принимает значение в соответствии с Общероссийским классификатором стран мира.
 
-|`BirthDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]`
 |Дата рождения.
 
-|`Position`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Position]`
 |Должность.
 
 |===
