--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc
@@ -1,4 +1,4 @@
-= OrganizationInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo -- класс
 
 Сведения об организации (СвОргТип) -- 4.18.
 
@@ -18,16 +18,16 @@ public class OrganizationInfo
 |===
 |Имя |Описание
 
-|`Name`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
 |Наименование организации / Наименование обособленного подразделения организации (Обязательный)
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН организации (Обязательный)
 
-|`Kpp`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
 |КПП организации (Обязательный)
 
-|`Ogrn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrn]`
 |ОГРН
 
 |===
