--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo_CL.adoc
@@ -1,4 +1,4 @@
-= ParentPrincipalInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo -- класс
 
 Сведения о доверителе из доверенности, на основании которой осуществляется передоверие (СвДоверщП) -- 4.16.
 
@@ -18,10 +18,10 @@ public class ParentPrincipalInfo
 |===
 |Имя |Описание
 
-|`RussianCompany`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[RussianCompany]`
 |Сведения о доверителе – российском юридическом лице (Обязательный с условием). Обязательный, если доверителем является российская организация.
 
-|`Individual`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2_CL.adoc[Individual]`
 |Сведения о доверителе – физическом лице (Обязательный с условием). Обязательный, если доверителем является физическое лицо.
 
 |===
