--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyInfo_CL.adoc
@@ -1,4 +1,4 @@
-= PowerOfAttorneyInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyInfo -- класс
 
 Сведения доверенности (СвДов) -- 4.4.
 
@@ -18,20 +18,19 @@ public class PowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`InternalPowerOfAttorneyNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[InternalPowerOfAttorneyNumber]`
 |Номер доверенности. Внутренний номер доверенности.
 
-|`PowerOfAttorneyStartDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]`
 |Дата совершения (выдачи) доверенности (Обязательный).
 
-|`PowerOfAttorneyEndDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyEndDate]`
 |Дата окончания срока действия доверенности (Обязательный).
 
-|`RetrustType`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustType_EN.adoc[RetrustType]`
 |Признак возможности оформления передоверия (Обязательный).
 
-|`TaxCodes`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[TaxCodes]`
 |Код налогового органа, в отношении которого действует доверенность. При оформлении доверенности в отношении всех налоговых органов Российской Федерации не заполняется.
-
 
 |===
