--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPowerOfAttorneyInfo_CL.adoc
@@ -1,4 +1,4 @@
-= PrimaryPowerOfAttorneyInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PrimaryPowerOfAttorneyInfo -- класс
 
 Сведения об основной доверенности (СвОснДов) -- 4.13.
 
@@ -18,10 +18,10 @@ public class PrimaryPowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`PowerOfAttorneyNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[PowerOfAttorneyNumber]`
 |Единый регистрационный номер основной доверенности (Обязательный)
 
-|`Principal`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPrincipalInfo_CL.adoc[Principal]`
 |Сведения о доверителе основной доверенности (Обязательный)
 
 |===
