--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalInfo_CL.adoc
@@ -1,4 +1,4 @@
-= PrincipalInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PrincipalInfo -- класс
 
 Сведения о доверителе (СвДоверит) -- 4.5.
 
@@ -18,13 +18,13 @@ public class PrincipalInfo
 |===
 |Имя |Описание
 
-|`RussianCompany`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo_CL.adoc[RussianCompany]`
 |Сведения о российской организации (Обязательный с условием). Обязательный, если доверителем является российская организация.
 
-|`ForeignCompany`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo_CL.adoc[ForeignCompany]`
 |Сведения об иностранной организации (Обязательный с условием). Обязательный, если доверителем является иностранная организация.
 
-|`Individual`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3_CL.adoc[Individual]`
 |Сведения о физическом лице (Обязательный с условием). Обязательный, если доверителем является физическое лицо.
 
 |===
