--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo_CL.adoc
@@ -1,4 +1,4 @@
-= RepresentativeInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo -- класс
 
 Сведения об уполномоченном представителе (уполномоченных представителях) (СвПредТип) -- 4.20.
 
@@ -18,10 +18,10 @@ public class RepresentativeInfo
 |===
 |Имя |Описание
 
-|`Organization`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc[Organization]`
 |Сведения об организации (Обязательный с условием). Обязательный, если в доверенности в качестве уполномоченного представителя требуется указать юридическое лицо.
 
-|`Individual`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo_CL.adoc[Individual]`
 |Сведения о физическом лице, в том числе индивидуальном предпринимателе (Обязательный). Указываются сведения об уполномоченном физическом лице (в том числе, когда в доверенности в качестве уполномоченного представителя указывается юридическое лицо) или индивидуальном предпринимателе. Расхождение с форматом: поддерживается только один уполномоченный представитель.
 
 |===
