--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyDocumentData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyDocumentData_CL.adoc
@@ -1,4 +1,4 @@
-= RetrustPowerOfAttorneyDocumentData -- класс
+= PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyDocumentData -- класс
 
 Передоверие (Передов) -- 4.11.
 
@@ -18,16 +18,16 @@ public class RetrustPowerOfAttorneyDocumentData
 |===
 |Имя |Описание
 
-|`PowerOfAttorney`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyInfo_CL.adoc[PowerOfAttorney]`
 |Сведения доверенности, совершённой (выданной) в рамках передоверия (Обязательный).
 
-|`Principal`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc[Principal]`
 |Сведения о доверителе в порядке передоверия (Обязательный). Сведения о лице, передающем полномочия другому лицу в порядке передоверия.
 
-|`Representative`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo_CL.adoc[Representative]`
 |Сведения об уполномоченном представителе (Обязательный). Расхождение с форматом: поддерживается только один уполномоченный представитель.
 
-|`RepresentativePowers`
+|`xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[RepresentativePowers]`
 |Признак (код) области полномочий уполномоченного представителя (Обязательный).
 
 |===
