--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyInfo_CL.adoc
@@ -1,4 +1,4 @@
-= RetrustPowerOfAttorneyInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyInfo -- класс
 
 Сведения доверенности, совершённой (выданной) в рамках передоверия (СвДовП) -- 4.12.
 
@@ -18,28 +18,28 @@ public class RetrustPowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`ParentPowerOfAttorneyNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[ParentPowerOfAttorneyNumber]`
 |Регистрационный номер доверенности, в отношении которой производится передоверие (Обязательный). Если передоверие осуществляется на основании основной доверенности, значение совпадает с регистрационным номером основной доверенности.
 
-|`InternalPowerOfAttorneyNumber`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[InternalPowerOfAttorneyNumber]`
 |Номер доверенности. Внутренний номер доверенности.
 
-|`PowerOfAttorneyStartDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyStartDate]`
 |Дата совершения (выдачи) доверенности (Обязательный).
 
-|`PowerOfAttorneyEndDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[PowerOfAttorneyEndDate]`
 |Дата окончания срока действия доверенности (Обязательный).
 
-|`RetrustType`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustType_EN.adoc[RetrustType]`
 |Признак возможности оформления передоверия (Обязательный).
 
-|`PrimaryPowerOfAttorney`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPowerOfAttorneyInfo_CL.adoc[PrimaryPowerOfAttorney]`
 |Сведения об основной доверенности (Обязательный).
 
-|`ParentPrincipal`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo_CL.adoc[ParentPrincipal]`
 |Сведения о доверителе из доверенности, на основании которой осуществляется передоверие (Обязательный с условием). Элемент должен отсутствовать, если передоверие осуществляется на основании основной доверенности.
 
-|`TaxCodes`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[TaxCodes]`
 |Код налогового органа, в отношении которого действует доверенность. При оформлении доверенности в отношении всех налоговых органов Российской Федерации не заполняется.
 
 |===
