--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc
@@ -1,4 +1,4 @@
-= RussianCompanyInfo1 -- класс
+= PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo1 -- класс
 
 Сведения о российском юридическом лице (СведЮЛТип) -- 4.19.
 
@@ -18,16 +18,16 @@ public class RussianCompanyInfo1
 |===
 |Имя |Описание
 
-|`Name`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Name]`
 |Наименование организации (Обязательный).
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН организации (Обязательный).
 
-|`Kpp`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Kpp]`
 |КПП организации (Обязательный). Указывается КПП, присвоенный организации по месту ее нахождения.
 
-|`Ogrn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrn]`
 |ОГРН (Обязательный).
 
 |===
