--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVELData.AddressInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVELData.AddressInfo_CL.adoc
@@ -18,9 +18,14 @@ public class AddressInfo
 |===
 |Имя |Описание
 
-|`AddressInfo(string, string)` |Заполняет Сведения об адресе (АдрТип)
+|`AddressInfo(string) : this()` a|Заполняет Сведения об адресе (АдрТип)
 
 .Параметры:
-* `regionCode` -- Субъект Российской Федерации (код).
 * `address` -- Адрес в Российской Федерации.
+
+|`AddressInfo(string, addressType)` a|Заполняет Адрес доверителя в доверенности (АдрДовТип)
+
+.Параметры:
+* `address` -- Адрес в Российской Федерации.
+
 |===
