--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVELData.IndividualPrincipalInfo_CL.adoc
@@ -12,6 +12,21 @@
 public class IndividualPrincipalInfo : IndividualDelegatedAuthorityInfo
 ----
 
+== Поля
+
+[cols=",",options="header"]
+|===
+|Имя |Описание
+
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[inn]` |ИНН
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Ogrnip]` |ОГРНИП.
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Snils]` |СНИЛС
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]` |Гражданство
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[birthDate]` |Дата рождения
+|`xref:Entities/PowerOfAttorneyFNSDOVELData.IdentityDocumentInfo_CL.adoc[identityDocument]` |Документ, удостоверяющий личность
+
+|===
+
 == Методы
 
 [cols=",",options="header"]
