--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSData_CL.adoc
@@ -69,7 +69,7 @@ public abstract class PowerOfAttorneyFNSData : PowerOfAttorneyData
 * Мужской -- `Male = 1`
 * `Женский` -- `Female = 2`
 |`DocumentKindCode` a|.Код вида документа:
-* Свидетельство о рождении -- (Код 03) -- `* BirthCertificate`
+* Свидетельство о рождении -- (Код 03) -- `BirthCertificate`
 * Военный билет (Код 07) -- `MilitaryTicket`
 * Паспорт иностранного гражданина (Код 10) -- `ForeignPassport`
 * Свидетельство о рассмотрении ходатайства о признании лица беженцем на территории Российской Федерации по существу (Код 11) -- `Petitions`
