--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativeInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RepresentativeInfo_CL.adoc
@@ -18,9 +18,9 @@ public sealed class RepresentativeInfo
 |===
 |Имя |Описание
 
-|`RussianEntity` |Сведения о юридическом лице
-|`SoleProprietor` |Сведения об индивидуальном предпринимателе
-|`Individual` |Сведения о физическом лице
-|`BranchOfRussianEntity` |Сведения о филиале (обособленном подразделении) юридического лица
-|`BranchOfForeignEntity` |Сведения о филиале (аккредитованном представительстве) иностранного юридического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[RussianEntity]` |Сведения о юридическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleProprietorInfo0_CL.adoc[SoleProprietor]` |Сведения об индивидуальном предпринимателе
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.SoleExecutiveIndividualInfo_CL.adoc[Individual]` |Сведения о физическом лице
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.LegalEntityInfo_CL.adoc[BranchOfRussianEntity]` |Сведения о филиале (обособленном подразделении) юридического лица
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.ForeignEntityInfo_CL.adoc[BranchOfForeignEntity]` |Сведения о филиале (аккредитованном представительстве) иностранного юридического лица
 |===
