--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RetrustPowerOfAttorneyDocumentData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.RetrustPowerOfAttorneyDocumentData_CL.adoc
@@ -18,7 +18,7 @@ public sealed class RetrustPowerOfAttorneyDocumentData
 |===
 |Имя |Описание
 
-|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.IrrevocablePowerOfAttorneyInfo_CL.adoc[PowerOfAttorney]` |Сведения о доверенности
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorney]` |Сведения о доверенности
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativesInfo_CL.adoc[Representative]` |Сведения о лице (лицах), получившем (получивших) полномочия
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.RepresentativePowersInfo_CL.adoc[RepresentativePowers]` |Сведения о передаваемом (передаваемых) полномочии (полномочиях)
 |`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyEMCHDData.NotaryCertificateInfo_CL.adoc[NotaryCertificateInfo]` |Сведения о нотариальном удостоверении
