--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocumentData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocumentData_CL.adoc
@@ -1,4 +1,4 @@
-= PowerOfAttorneyDocumentData -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocumentData -- класс
 
 Доверенность (Довер) -- 4.3.
 
@@ -18,16 +18,16 @@ public class PowerOfAttorneyDocumentData
 |===
 |Имя |Описание
 
-|`PowerOfAttorney`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorney]`
 |Сведения доверенности (Обязательный).
 
-|`Principal`
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc[Principal]`
 |Сведения о доверителе (Обязательный). Сведения о лице, доверяющем представителю выступать от своего имени в отношениях, регулируемых законодательством Российской Федерации о налогах и сборах.
 
-|`Representative`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo_CL.adoc[Representative]`
 |Сведения об уполномоченном представителе (Обязательный). Расхождение с форматом: поддерживается только один уполномоченный представитель.
 
-|`RepresentativePowers`
+|`xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[RepresentativePowers]`
 |Признак (код) области полномочий уполномоченного представителя (Обязательный).
 
 |===
