--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPrincipalInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPrincipalInfo_CL.adoc
@@ -1,4 +1,4 @@
-= PrimaryPrincipalInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PrimaryPrincipalInfo -- класс
 
 Сведения о доверителе основной доверенности (СвДоверитОсн) -- 4.14.
 
@@ -18,13 +18,13 @@ public class PrimaryPrincipalInfo
 |===
 |Имя |Описание
 
-|`RussianCompany`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo1_CL.adoc[RussianCompany]`
 |Сведения о доверителе -- российском юридическом лице (Обязательный с условием). Обязательный, если доверителем является российская организация.
 
-|`ForeignCompany`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo1_CL.adoc[ForeignCompany]`
 |Сведения о доверителе -- иностранном юридическом лице (Обязательный с условием). Обязательный, если доверителем является иностранная организация.
 
-|`Individual`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2_CL.adoc[Individual]`
 |Сведения о доверителе -- физическом лице (Обязательный с условием). Обязательный, если доверителем является физическое лицо.
 
 |===
