--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc
@@ -1,4 +1,4 @@
-= PrincipalWithoutPowerOfAttorneyInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PrincipalWithoutPowerOfAttorneyInfo -- класс
 
 Сведения о лице, действующем от имени юридического лица без доверенности (ЛицоБезДов) -- 4.7.
 
@@ -18,10 +18,10 @@ public class PrincipalWithoutPowerOfAttorneyInfo
 |===
 |Имя |Описание
 
-|`Organization`
-|Сведения об организации (Обязательный с условием). Обязательный, если полномочия единоличного исполнительного органа хозяйственного товарищества или общества, или в соответствии с законодательством о банкротстве переданы управляющей организации .
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc[Organization]`
+|Сведения об организации (Обязательный с условием). Обязательный, если полномочия единоличного исполнительного органа хозяйственного товарищества или общества, или в соответствии с законодательством о банкротстве переданы управляющей организации.
 
-|`Individual`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo_CL.adoc[Individual]`
 |Указываются сведения о физическом лице, действующем без доверенности от имени юридического лица или без доверенности от имени управляющей организации или в соответствии с законодательством о банкротстве.
 
 |===
