--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.SeparateSubdivisionManagerInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data.SeparateSubdivisionManagerInfo_CL.adoc
@@ -1,4 +1,4 @@
-= SeparateSubdivisionManagerInfo -- класс
+= PowerOfAttorneyFNSDOVEL502Data.SeparateSubdivisionManagerInfo -- класс
 
 Сведения о руководителе обособленного подразделения (СвРукОП) -- 4.10.
 
@@ -18,16 +18,16 @@ public class SeparateSubdivisionManagerInfo
 |===
 |Имя |Описание
 
-|`Inn`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Inn]`
 |ИНН физического лица - руководителя обособленного подразделения.
 |`Gender`
 |Пол физического лица (Обязательный).
-|`BirthDate`
+|`http://msdn.microsoft.com/ru-ru/library/system.datetime.aspx[BirthDate]`
 |Дата рождения (Обязательный).
-|`BirthPlace`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[BirthPlace]`
 |Место рождения.
 |`CitizenshipType`
 |Признак наличия гражданства (Обязательный).
-|`Citizenship`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[Citizenship]`
 |Гражданство  (Обязательный с условием). Обязательный для иностранного гражданина. Принимает значение в соответствии с Общероссийским классификатором стран мира.
 |===
