--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVEL502Data_CL.adoc
@@ -1,4 +1,4 @@
-= PowerOfAttorneyFNSDOVEL502Data -- класс
+= PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyFNSDOVEL502Data -- класс
 
 Данные доверенности в формате, подтверждающем полномочия представителя налогоплательщика, версия 5.02.
 
@@ -18,17 +18,17 @@ public class PowerOfAttorneyFNSDOVEL502Data : PowerOfAttorneyFNSData
 |===
 |Имя |Описание
 
-|`Document`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocument_CL.adoc[Document]`
 |Идентификатор формата доверенности
 
-|`RecipientID`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[RecipientID]`
 |Состав и структура документа (Обязательный)
 
-|`FinalRecipientID`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[FinalRecipientID]`
 |Идентификатор получателя файла доверенности (Обязательный)
 В случае передачи файла от отправителя к конечному получателю при отсутствии налоговых органов, осуществляющих передачу на промежуточных этапах, значения `RecipientID` и `FinalRecipientID` совпадают.
 
-|`SenderID`
+|`http://msdn.microsoft.com/ru-ru/library/system.string.aspx[SenderID]`
 a|Идентификатор отправителя информации (Обязательный)
 
 .Значение:
@@ -46,7 +46,7 @@ a|Идентификатор отправителя информации (Обя
 |`override DateTime GetPowerOfAttorneyStartDate()` |Заполняет дату выдачи доверенности
 |`override DateTime? GetPowerOfAttorneyEndDate()` |Заполняет дату окончания срок действия доверенности
 |`override string GetPowerOfAttorneyMachineReadableFileID()` |Заполняет идентификатор файла МЧД
-|`public override Guid GetPowerOfAttorneyNumber()` |Возвращает номер доверенности
+|`override Guid GetPowerOfAttorneyNumber()` |Возвращает номер доверенности
 |`override string GetPrincipal()` |Заполняет сведения о доверителе
 |`override string GetRepresentative()` |Заполняет сведения о лице, получившем полномочия
 |`override List<Powers> GetRepresentativesPowers()` |Заполняет сведения о полномочиях представителя
@@ -143,7 +143,7 @@ a|Идентификатор отправителя информации (Обя
 |===
 |Имя |Описание
 
-|`RetrustType`
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustType_EN.adoc[RetrustType]`
 a|Признак возможности оформления передоверия:
 
 * `Followed` = `1` -- передоверие возможно.
